# cav-hoomd

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  MODULES.md  README.md  README_DOCS.md  build.sh  cavitymd.py  example_usage.py  force_comparison.py  run_cavity_experiments.py  setup_docs.py  setup_docs.sh  setup_github_pages.sh  submit.sh  test_corrected_energy.py  test_plugin_imports.py  uninstall.sh
.github/: dependabot.yml
.github/workflows/: docs-netlify.yaml  docs.yaml  docs.yml  unit-test.yaml
_templates/autosummary/: class.rst
docs/: .gitignore  EnergyTracker_Verbosity.md  Makefile  README_DEPLOYMENT.md  conf.py  environment.yml  index.rst  installation.rst  quickstart.rst  references.bib  requirements.txt  theory.rst
docs/_build/doctrees/: README_DEPLOYMENT.doctree  index.doctree  installation.doctree  license.doctree  quickstart.doctree  theory.doctree
docs/_build/doctrees/api/: analysis.doctree  forces.doctree  index.doctree  simulation.doctree  utils.doctree
docs/_build/doctrees/api/_autosummary/: hoomd.cavitymd.analysis.doctree  hoomd.cavitymd.forces.doctree  hoomd.cavitymd.simulation.doctree  hoomd.cavitymd.utils.doctree
docs/_build/doctrees/examples/: index.doctree
docs/_build/doctrees/user_guide/: advanced_features.doctree  analysis.doctree  basic_usage.doctree  index.doctree  parameter_sweeps.doctree  performance.doctree
docs/_build/html/: .buildinfo  README_DEPLOYMENT.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  theory.html
docs/_build/html/.doctrees/: quickstart.doctree
docs/_build/html/.doctrees/api/: forces.doctree  index.doctree  simulation.doctree
docs/_build/html/.doctrees/api/_autosummary/: hoomd.cavitymd.forces.doctree  hoomd.cavitymd.utils.doctree
docs/_build/html/.doctrees/examples/: index.doctree
docs/_build/html/.doctrees/user_guide/: analysis.doctree  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/hoomd/cavitymd/: analysis.html  cavity_force_python.html  forces.html  simulation.html  utils.html
docs/_build/html/_sources/: installation.rst.txt  license.rst.txt
docs/_build/html/_sources/api/: analysis.rst.txt  simulation.rst.txt  utils.rst.txt
docs/_build/html/_sources/api/_autosummary/: hoomd.cavitymd.analysis.rst.txt  hoomd.cavitymd.forces.rst.txt  hoomd.cavitymd.utils.rst.txt
docs/_build/html/_sources/examples/: index.rst.txt
docs/_build/html/_sources/user_guide/: advanced_features.rst.txt  basic_usage.rst.txt  parameter_sweeps.rst.txt  performance.rst.txt
docs/_build/html/api/: analysis.html  forces.html  index.html  simulation.html  utils.html
docs/_build/html/api/_autosummary/: hoomd.cavitymd.analysis.html  hoomd.cavitymd.forces.html  hoomd.cavitymd.simulation.html  hoomd.cavitymd.utils.html
docs/_build/html/examples/: index.html
docs/_build/html/user_guide/: advanced_features.html  analysis.html  basic_usage.html  index.html  parameter_sweeps.html  performance.html
docs/_static/: custom.css
docs/api/: forces.rst  index.rst  simulation.rst
docs/api/_autosummary/: hoomd.cavitymd.analysis.rst  hoomd.cavitymd.forces.rst  hoomd.cavitymd.simulation.rst  hoomd.cavitymd.utils.rst
docs/user_guide/: analysis.rst  basic_usage.rst  index.rst  parameter_sweeps.rst  troubleshooting.rst
examples/: 01_basic_cavity_simulation.py  02_force_validation.py  03_energy_tracking_1ps.py  04_correlations_10ps.py  05_advanced_run.ipynb  05_advanced_run.py  README.md  cavitymd.py  nohup.out  plot_energy_analysis.py  process_and_plot_experiments.py  process_energy_only.py  process_fskt_only.py  test_output_periods.py  test_step_based_output.py
examples/bussi_langevin_finiteq_coupling_0epos00/: master_fskt_k=1.00.txt  prod-1-energy.txt  prod-1.gsd  prod-1_ref0.txt  prod-1_ref1.txt  prod-1_ref2.txt
examples/bussi_langevin_finiteq_coupling_1eneg03/: master_fskt_k=1.00.txt  prod-1-energy.txt  prod-1-energy_energy_tracker.txt  prod-1.gsd  prod-1_cavity_mode.txt  prod-1_dipole_dipole_autocorr.txt  prod-1_energy_contributions.txt  prod-1_kinetic_energy.txt  prod-1_ref0.txt  prod-1_ref1.txt  prod-1_ref2.txt
examples/bussi_langevin_finiteq_no_cavity/: prod-1.gsd
examples/bussi_langevin_no_finiteq_coupling_1eneg03/: master_fskt_k=1.00.txt  prod-1-energy.txt  prod-1-energy_energy_contributions.txt  prod-1-energy_energy_tracker.txt  prod-1.gsd  prod-1_cavity_mode.txt  prod-1_kinetic_energy.txt  prod-1_ref0.txt  prod-1_ref1.txt  prod-1_ref2.txt
src/: BussiReservoirThermostat.cc  BussiReservoirThermostat.h  CMakeLists.txt  CavityForceCompute.cc  CavityForceCompute.h  CavityForceComputeGPU.cc  CavityForceComputeGPU.cu  CavityForceComputeGPU.cuh  CavityForceComputeGPU.h  Thermostat.h  __init__.py  module.cc
src/bussi_reservoir/: __init__.py  module.cc
src/cavitymd/: __init__.py  analysis.py
src/hoomd/bussi_reservoir/: module.cc  thermostats.py
src/hoomd/cavitymd/: __init__.py  analysis.py  cavity_force_python.py  cli.py  experiments.py  forces.py  module.cc  simulation.py  utils.py
src/pytest/: test_bussi_reservoir.py
